welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 	if (estFaceMur()==true){
    return false
  }
  var detrompeur=0
  avance()
  if (getCouleurSol()==Color.green){
    detrompeur=2
  }else {
    detrompeur=1
  }
  recule()
  if (detrompeur==1){
    return false
  }
  if(detrompeur==2){
  	return true
  }
}
  

  